hphp/hack/test/typecheck/modules/module_first7.php.exp
File "module_first7.php", line 4, characters 10-12:
`module bar;` must be unique, and precede any other declarations in a file. (Parsing[1002])
