hphp/hack/test/typecheck/modules/module_first7.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>
namespace Bar {
  module bar;
}
